Fix contact us button mobile margin

--- a/css/partials/responsive.scss
+++ b/css/partials/responsive.scss
@@ -308,6 +308,10 @@
             padding-left: 75px;
         }
 
+        .btn {
+            margin-left: 75px;
+        }
+
         .form-control {
             font-size: 0.95em;
         }
